<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.update.FragmentUpdate">

    <TextView
        android:id="@+id/labelUpdate"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/atualizar_dados"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/zulao"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageView
        android:id="@+id/iconUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/user_pic_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelUpdate"
        app:tint="@color/zulao" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:textColor="@color/zulao"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/zulao"
        android:textColorHint="@color/greydesable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconUser"
        tools:hint="@string/nome" />

    <EditText
        android:id="@+id/editCargo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/zulao"
        android:textColor="@color/zulao"
        android:textColorHint="@color/greydesable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNome"
        tools:hint="@string/cargo" />

    <EditText
        android:id="@+id/editRes1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/zulao"
        android:textColor="@color/zulao"
        android:textColorHint="@color/greydesable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCargo"
        tools:hint="@string/reservado_1" />

    <EditText
        android:id="@+id/editRes2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/zulao"
        android:backgroundTint="@color/zulao"
        android:textColorHint="@color/greydesable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRes1"
        tools:hint="@string/reservado_2" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/zulao"
        android:layout_marginTop="10dp"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRes2"
        tools:enabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>