<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.cadastro.FragmentCadastro">

    <TextView
        android:id="@+id/titleCrud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/roundedblue"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp"
        android:text="@string/cadastrar_funcion_rio"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/nome_"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/titleCrud"
        app:layout_constraintBottom_toBottomOf="@id/editName"/>

    <EditText
        android:id="@+id/editName"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/zulao"
        app:layout_constraintTop_toBottomOf="@id/titleCrud"
        app:layout_constraintEnd_toEndOf="@id/titleCrud"
        app:layout_constraintStart_toEndOf="@id/labelName" />

    <View
        android:id="@+id/vLabelName"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/editComplement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName" />
    <TextView
        android:id="@+id/labelComplement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/complemento_"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/titleCrud"
        app:layout_constraintBottom_toBottomOf="@id/editComplement"/>
    <EditText
        android:id="@+id/editComplement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/zulao"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/vLabelName"
        app:layout_constraintEnd_toEndOf="@id/titleCrud"
        app:layout_constraintStart_toEndOf="@id/labelComplement" />
    <View
        android:id="@+id/vLabelComplement"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/editRes1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editComplement" />
    <TextView
        android:id="@+id/labelReservado1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/reservado_1_"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/titleCrud"
        app:layout_constraintBottom_toBottomOf="@id/editRes1"/>

    <EditText
        android:id="@+id/editRes1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        android:backgroundTint="@color/zulao"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/vLabelComplement"
        app:layout_constraintEnd_toEndOf="@id/titleCrud"
        app:layout_constraintStart_toEndOf="@id/labelReservado1" />

    <View
        android:id="@+id/vLabelRes1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/editRes2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRes1" />

    <TextView
        android:id="@+id/labelReservado2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/reservado_2_"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/titleCrud"
        app:layout_constraintBottom_toBottomOf="@id/editRes2"
        />

    <EditText
        android:id="@+id/editRes2"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/zulao"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/vLabelRes1"
        app:layout_constraintEnd_toEndOf="@id/titleCrud"
        app:layout_constraintStart_toEndOf="@id/labelReservado2" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/zulao"
        android:enabled="true"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRes2"
        />
</androidx.constraintlayout.widget.ConstraintLayout>